--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -2,15 +2,15 @@
 
 
 
-<htm lang="en" xmlns="http://w3.org/1999.html">
+<html lang="en" xmlns="http://w3.org/1999.html">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>@ViewBag.Title - Gro-Bot</title>
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
-        <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css" rel="stylesheet">
+        @*<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="http://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css" rel="stylesheet">*@
 
         <style>
             ul {
