--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -9,7 +9,7 @@
 <div style="text-align: center"><img src="~/Content/Images/GrobotLogo.png" title="Gro-Bot"/></div>
 
 @*Gro-bot App About Description *@
-<h2 style="text-align: center">Gro-Bot Web Application</h2>
+<h2 style="text-align: center">GroBot Web Application</h2>
 <h2 style="text-align: center">Version 1.0.0</h2>
 <h2 style="text-align: center">Green Eden 2019-2020 - Seattle Pacific University</h2>
 <br />
