--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>@ViewBag.Title - Gro-Bot</title>
+        <title>@ViewBag.Title - GroBot</title>
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
         @*<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -54,7 +54,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="horizontal">
-                    <li><a href="~/Home/Index">Gro-bot</a></li>
+                    <li><a href="~/Home/Index">Grobot</a></li>
                     <li><a href="~/Home/About">About</a></li>
                     <li><a href="~/Home/Contact">Contact</a></li>
                 </ul>
