--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,12 +21,12 @@
     <div class="text-center">
         <div style="" class="centered">
             <div>
-                <h1 class="title-1">Gro-Bot  -  An Automated Gardening System</h1>
+                <h1 class="title-1">GroBot  -  An Automated Gardening System</h1>
                 <a href="~/Home/Contact" class="btn btn-success" target="_blank">Contact us</a>
             </div>
         </div>
         @*Logo Image*@
-        <div style="text-align: center"><img src="~/Content/Images/GrobotLogo.png" title="Gro-Bot" /></div>
+        <div style="text-align: center"><img src="~/Content/Images/GrobotLogo.png" title="GroBot" /></div>
 
     </div>
 </header>
@@ -38,13 +38,13 @@
             <p>
                 Pick a plant, and let us know how you want us to take care of it!
             </p>
-            <p><a class="btn btn-success" href="~/Grobot/CreateGarden">Start Your Garden &raquo;</a></p>
+            <p><a class="btn btn-success" href="~/Grobot/CreateGarden">Start Planting &raquo;</a></p>
         </div>
         
         <div class="box col-sm-12 col-lg-6">
             <h2>See your garden</h2>
             <p>Take a look at your garden's health</p>
-            <p><a class="btn btn-success" href="~/Grobot/ManageGarden">See Your Garden &raquo;</a></p>
+            <p><a class="btn btn-success" href="~/Grobot/ManageGarden">See Your Garden Report &raquo;</a></p>
         </div>
     </div>
 
