--- a/Views/Grobot/ManageGarden.cshtml
+++ b/Views/Grobot/ManageGarden.cshtml
@@ -174,6 +174,9 @@
 
         <script type="text/javascript">
 
+            setTimeout(function(){
+                    window.location.href = "/Grobot/ManageGarden";
+            }, 60000)
 
             var myTemp = $('#temp').text();
             var myMoisture = $('#moisture').text();
